Refactorización: Integración de la configuración de Mapuche y mejora de la extracción de datos en el procesamiento de SICOSS
Esta confirmación incluye varias mejoras y refactorizaciones clave:

- **`.gitignore`**: Se añadieron `SicossOptimizado.php` y `.venv*` al archivo `.gitignore` para excluirlos del control de versiones.
- **`SicossProcessorTester.py`**: Se eliminaron las importaciones no utilizadas para limpiar el código.
- **`test_mapuche_config.ipynb`**: Se eliminaron los recuentos de ejecución y las salidas del notebook para reducir su tamaño y mejorar la legibilidad.
- **`test_extractor.py`**:
- Se integró `mapuche_config` para obtener dinámicamente los topes jubilatorios, lo que mejora la flexibilidad de la configuración.
- Se modificaron los parámetros de prueba para que coincidan con los datos actuales (año 2025, mes 6, legado 110830). - Se limitó el número de legajos procesados ​​en `test_extractor_multiples_legajos` a 1000 para agilizar las pruebas.
- **`SicossProcessor.py`**:
- Se añadió la sugerencia de tipo para `DataFrame`
- Se mejoró la documentación del método `_inicializar_configuracion`.
- Se añadió una comprobación para `check_sin_activo`
- Se modificó `_aplicar_topes_personales_pandas` para que devuelva `DataFrame | None`
- **`sicoss.ipynb`**:
- Se actualizó el cuaderno para usar los datos y las configuraciones actuales (año 2025, mes 6).
- Se solucionaron los problemas de conexión a la base de datos y los procesos de extracción de datos.
- Se mejoraron los pasos de análisis y procesamiento de datos.

Estos cambios optimizan el flujo de procesamiento de SICOSS al optimizar la gestión de la configuración, la extracción de datos y la calidad general del código.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+SicossOptimizado.php
 
 # Jupyter Notebook
 .ipynb_checkpoints
@@ -27,6 +28,7 @@ wheels/
 database.ini
 .env
 .venv
+.venv*
 env/
 venv/
 ENV/
